# algoztop

./: LICENSE  README.org  bakeit  common-problem.cmake
0001-easy-count-pairs-with-given-sum/: CMakeLists.txt  buildit  hashset-test.c  hashset.c  problem.txt
0001-easy-count-pairs-with-given-sum/include/: hashset.h
0001-easy-count-pairs-with-given-sum/tests/: test-solution-1.c
0002-easy-find-islands/: CMakeLists.txt  problem.txt  solution-1.c  test-solution-1.c
0002-easy-find-islands/include/: solution.h
0003-easy-replace-even/: problem.txt  solution-1.c  test-solution-1.c
0003-easy-replace-even/include/: solution.h
0004-medium-trapping-rain-water/: CMakeLists.txt  problem.txt  solution-1.c  test-solution-1.c
0004-medium-trapping-rain-water/include/: solution.h
0004-medium-trapping-rain-water/tests/: test-solution-1.c
